<resources>
    <string name="app_name">FinalProjectFall2020</string>
    <string name="idSelectGame">Super Smash Bros. Quiz</string>
    <string name="idSSB1Button">Super Smash Bros.</string>
    <string name="idSSB2Button">Super Smash Bros. Melee</string>
    <string name="idSSB3Button">Super Smash Bros. Brawl</string>
    <string name="idSSB4Button">Super Smash Bros. for Wii U/3DS</string>
    <string name="idSSB5Button">Super Smash Bros. Ultimate</string>
    <string name="idScoreSSB1">0/12</string>
    <string name="idHintSSB1">Enter character names from SSB</string>
    <string name="idButtonCheckSSB1">Enter</string>
    <string name="idScoreSSB2">0/14</string>
    <string name="idHintSSB2">Enter character names from SSBM</string>
    <string name="idButtonCheckSSB2">Enter</string>
    <string name="idScoreSSB3">0/16</string>
    <string name="idHintSSB3">Enter character names from SSBB</string>
    <string name="idButtonCheckSSB3">Enter</string>
    <string name="idScoreSSB4">0/19</string>
    <string name="idHintSSB4">Enter character names from SSB4</string>
    <string name="idButtonCheckSSB4">Enter</string>
    <string name="idScoreSSB5">0/19</string>
    <string name="idHintSSB5">Enter character names from SSBU</string>
    <string name="idButtonCheckSSB5">Enter</string>

    <string name="idMario">Mario</string>
    <string name="idDonkeyKong">Donkey Kong</string>
    <string name="idLink">Link</string>
    <string name="idSamus">Samus</string>
    <string name="idDarkSamus">Dark Samus</string>
    <string name="idYoshi">Yoshi</string>
    <string name="idKirby">Kirby</string>
    <string name="idFox">Fox</string>
    <string name="idPikachu">Pikachu</string>
    <string name="idLuigi">Luigi</string>
    <string name="idNess">Ness</string>
    <string name="idCaptainFalcon">Captain Falcon</string>
    <string name="idJigglypuff">Jigglypuff</string>
    <string name="idPeach">Peach</string>
    <string name="idDaisy">Daisy</string>
    <string name="idBowser">Bowser</string>
    <string name="idIceClimbers">Ice Climbers</string>
    <string name="idSheik">Sheik</string>
    <string name="idZelda">Zelda</string>
    <string name="idDrMario">Dr. Mario</string>
    <string name="idPichu">Pichu</string>
    <string name="idFalco">Falco</string>
    <string name="idMarth">Marth</string>
    <string name="idLucina">Lucina</string>
    <string name="idYoungLink">Young Link</string>
    <string name="idGanondorf">Ganondorf</string>
    <string name="idMewtwo">Mewtwo</string>
    <string name="idRoy">Roy</string>
    <string name="idChrom">Chrom</string>
    <string name="idMrGameAndWatch">Mr. Game and Watch</string>
    <string name="idMetaKnight">Meta Knight</string>
    <string name="idPit">Pit</string>
    <string name="idDarkPit">Dark Pit</string>
    <string name="idZeroSuitSamus">Zero Suit Samus</string>
    <string name="idWario">Wario</string>
    <string name="idSnake">Snake</string>
    <string name="idIke">Ike</string>
    <string name="idPokémonTrainer">Pokémon Trainer (Squirtle / Ivysaur / Charizard)</string>
    <string name="idDiddyKong">Diddy Kong</string>
    <string name="idLucas">Lucas</string>
    <string name="idSonic">Sonic</string>
    <string name="idKingDedede">King Dedede</string>
    <string name="idOlimar">Olimar</string>
    <string name="idLucario">Lucario</string>
    <string name="idROB">R.O.B.</string>
    <string name="idToonLink">Toon Link</string>
    <string name="idWolf">Wolf</string>
    <string name="idVillager">Villager</string>
    <string name="idMegaMan">Mega Man</string>
    <string name="idWiiFitTrainer">Wii Fit Trainer</string>
    <string name="idRosalinaAndLuma">Rosalina and Luma</string>
    <string name="idLittleMac">Little Mac</string>
    <string name="idGreninja">Greninja</string>
    <string name="idMiiFighter">Mii Fighter (Brawler / Swordfigther / Gunner)</string>
    <string name="idPalutena">Palutena</string>
    <string name="idPacMan">Pac-Man</string>
    <string name="idRobin">Robin</string>
    <string name="idShulk">Shulk</string>
    <string name="idBowserJr">Bowser Jr.</string>
    <string name="idDuckHunt">Duck Hunt</string>
    <string name="idRyu">Ryu</string>
    <string name="idKen">Ken</string>
    <string name="idCloud">Cloud</string>
    <string name="idCorrin">Corrin</string>
    <string name="idBayonetta">Bayonetta</string>
    <string name="idInkling">Inkling</string>
    <string name="idRidley">Ridley</string>
    <string name="idSimon">Simon</string>
    <string name="idRichter">Richter</string>
    <string name="idKingKRool">King K. Rool</string>
    <string name="idIsabelle">Isabelle</string>
    <string name="idIncineroar">Incineroar</string>
    <string name="idPiranhaPlant">Piranha Plant</string>
    <string name="idJoker">Joker</string>
    <string name="idHero">Hero</string>
    <string name="idBanjoAndKazooie">Banjo and Kazooie</string>
    <string name="idTerry">Terry</string>
    <string name="idByleth">Byleth</string>
    <string name="idMinMin">Min Min</string>
    <string name="idSteve">Steve</string>
</resources>
