<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivitySSB5">


    <EditText
        android:id="@+id/idEditTextSSB5"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/idHintSSB5"
        android:hint="@string/idHintSSB5"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <TextView
        android:id="@+id/idScoreSSB5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/idScoreSSB5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idEditTextSSB5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idInkling"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/idInkling"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditTextSSB5"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idDaisy"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idDaisy"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idInkling"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idRidley"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idRidley"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDaisy"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idSimon"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idSimon"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRidley"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idRichter"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idRichter"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSimon"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idChrom"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idChrom"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRichter"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idDarkSamus"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idDarkSamus"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idChrom"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idKingKRool"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idKingKRool"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDarkSamus"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idIsabelle"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idIsabelle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idKingKRool"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idKen"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:gravity="center"
        android:text="@string/idKen"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idIsabelle"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idIncineroar"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/idIncineroar"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idInkling"
        app:layout_constraintTop_toBottomOf="@id/idEditTextSSB5"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idPiranhaPlant"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idPiranhaPlant"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idRidley"
        app:layout_constraintTop_toBottomOf="@+id/idIncineroar"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idJoker"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idJoker"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idSimon"
        app:layout_constraintTop_toBottomOf="@+id/idPiranhaPlant"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idHero"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idHero"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idRichter"
        app:layout_constraintTop_toBottomOf="@+id/idJoker"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idBanjoAndKazooie"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idBanjoAndKazooie"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idKingKRool"
        app:layout_constraintTop_toBottomOf="@+id/idHero"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idTerry"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idTerry"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idIsabelle"
        app:layout_constraintTop_toBottomOf="@+id/idBanjoAndKazooie"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idByleth"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idByleth"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idKingKRool"
        app:layout_constraintTop_toBottomOf="@+id/idTerry"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idMinMin"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idMinMin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idIsabelle"
        app:layout_constraintTop_toBottomOf="@+id/idByleth"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idSteve"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idSteve"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idIsabelle"
        app:layout_constraintTop_toBottomOf="@+id/idMinMin"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/idSephiroth"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/idSephiroth"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/idKen"
        app:layout_constraintTop_toBottomOf="@+id/idSteve"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/idButtonCheckSSB5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/idButtonCheckSSB5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idEditTextSSB5"
        app:layout_constraintTop_toBottomOf="@+id/idScoreSSB5" />
</androidx.constraintlayout.widget.ConstraintLayout>
